# bell_web

./: .gitignore  README.md  app.py  bell_web_sistem (1).sql  bell_web_sistem (2).sql  bell_web_sistem (3).sql  generate_penilaian.sql  index.html  jadwal.py  laravel_sequence.puml  new-requirement.txt  new-requirement2.txt  pyproject.toml  requirements.txt  run.py  seeder.py  seeder.sql  seeder_bell_web_sistem.sql  sequence.py  shortcut.html
app/: __init__.py  api_admin.py  api_guru.py  api_login.py  api_murid.py  config.py  database.py  extensions.py  form.py  jdwal.json  login.py  midtrans.py  seeder.py  view.py
seeder_backup/: bell_web_sistem (19).sql  bell_web_sistem_old.sql  seeder.sql  tanpa_penilaian_dan_tuga - Copy.sql  tanpa_penilaian_dan_tuga.sql
sequence/: sequence.puml  sequence_admin_1.puml  sequence_admin_2.puml  sequence_guru_1.puml  sequence_guru_2.puml  sequence_guru_3.puml  sequence_midtrans.puml  sequence_murid.puml
system/: __init__.py  api_login.py  view.py
template_excel/: NOnnn.docx  No.docx  contoh_data_1.xlsx  contoh_data_2.xlsx  contoh_data_input_pembagian_kelas.xlsx  contoh_data_input_pembagian_kelas_2.xlsx  contoh_data_input_pembagian_kelas_3.xlsx  contoh_data_siswa_2.xlsx  contoh_data_siswa_3.xlsx  contoh_data_siswa_4.xlsx  data selain dummy.xlsx  data_guru_penilaian.xlsx  data_guru_penilaian3.xlsx  penilaian_Murid_Jamar.xlsx
web-_-murid/: confirm_email.html  dashboard.html  forgot_password.html  login.html  manage_jadwal.html  manage_ujian.html  register.html  reset_password.html  verif_email.html
web_Guru/: forgot_password.html  (+8 more)
(+93 files in other folders)
