[tool.poetry]
name = "hello-flask-poetry"
version = "0.1.0"
description = ""
authors = ["Donatas Rasiukevicius <donatas@fly.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pymongo = "^4.10.1"  # Versi diperbarui
flask-bcrypt = "^1.0.1"
pyjwt = "^2.9.0"  # Versi diperbarui
Flask-PyMongo = "^2.3.0"
Flask-Cors = "^5.0.0"
flask_mail = "^0.10.0"
python-dotenv = "^1.0.1"  # Tambahan baru
midtransclient = "^1.4.2"  # Tambahan baru

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
